# drone_ws

./: README.md
arena_2025/: model.sdf  (+2 more)
confined_navigation/: package.xml  setup.cfg  setup.py
confined_navigation/confined_navigation/: navigation_node.py  perception_node.py  planner_node.py  slam_node.py  takeoff_node.py
confined_navigation/launch/: confined_navigation.launch.py
mrs_uav_gazebo_simulator_test2/: .gitignore  README.md  package.xml  setup.py
mrs_uav_gazebo_simulator_test2/.github/workflows/: ros_package_build.yml
mrs_uav_gazebo_simulator_test2/ROMFS/px4fmu_common/init.d-posix/: px4-rc.mavlink_qgc  rcS
mrs_uav_gazebo_simulator_test2/ROMFS/px4fmu_common/init.d-posix/airframes/: 4001_f330  4001_f450  4001_m690  4001_x500  6001_f550
mrs_uav_gazebo_simulator_test2/config/: spawner_params.yaml  uav_ros_gz_bridge_config.yaml.jinja
mrs_uav_gazebo_simulator_test2/config/mrs_uav_system/: f450.yaml  f550.yaml  robofly.yaml
mrs_uav_gazebo_simulator_test2/launch/: run_simulation_firmware.launch.py  uav_ros_gz_bridge.launch.py
mrs_uav_gazebo_simulator_test2/models/mrs_robots_description/sdf/: README.md
mrs_uav_gazebo_simulator_test2/models/mrs_robots_description/sdf/drones/: f450.sdf.jinja  f550.sdf.jinja  m690.sdf.jinja  naki.sdf.jinja  t650.sdf.jinja  x500.sdf.jinja
mrs_uav_gazebo_simulator_test2/mrs_uav_gazebo_simulator/: mrs_drone_spawner.py
mrs_uav_gazebo_simulator_test2/mrs_uav_gazebo_simulator/core/: px4_mavlink_manager.py  ros_gz_bridge_manager.py  user_input_manager.py
mrs_uav_gazebo_simulator_test2/mrs_uav_gazebo_simulator/utils/: spawner_exceptions.py
mrs_uav_gazebo_simulator_test2/tests/: test_camera_jinja_macros.py  test_drone_jinja_macros.py  test_lidar_jinja_macros.py
mrs_uav_gazebo_simulator_test2/tests/utils/: camera_macro_utils.py  common_utils.py  sensor_tag_checks.py
mrs_uav_gazebo_simulator_test2/tmux/one_drone/: layout.json  rviz.rviz  session.yml  takeoff.sh
mrs_uav_gazebo_simulator_test2/tmux/one_drone/config/: world_config.yaml
mrs_uav_gazebo_simulator_test2/tmux/one_drone/scripts/: drone_exploration.py  drone_exploration1.py
mrs_uav_gazebo_simulator_test2/tmux/one_drone_lidar/: kill.sh  rviz.rviz
mrs_uav_gazebo_simulator_test2/tmux/two_drones/config/: network_config.yaml
(+124 files in other folders)
