<?xml version="1.0"?>
<package format="3">
  <name>confined_navigation</name>
  <version>0.1.0</version>
  <description>Navegação autônoma em espaço confinado 8x8 sem GPS</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>mrs_msgs</depend>

  <exec_depend>aloam</exec_depend>
  <exec_depend>octomap_server</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>